# MCS_Eval_app

./: .env.example  .gitignore  Dockerfile  README.md  auth.py  d2e_client.py  dataverse_client.py  docker-compose.yml  eval_engine.py  knowledge_extractor.py  provisioner.py  pyproject.toml  retro_eval.py  rxconfig.py
alembic/versions/: 07e010ccda9a_add_activities_json_to_evalresult.py  81cb0278285b_.py  f7b2d9b41e6d_add_knowledge_sources.py
assets/: custom.css
docs/plans/: 2026-03-02-improvements-design.md  2026-03-02-targeted-improvements.md  2026-03-07-knowledge-sources-design.md  2026-03-07-knowledge-sources.md
tests/: test_context_fallback.py  test_d2e_client.py  test_dataverse_client.py  test_eval_engine.py  test_knowledge_extractor.py  test_knowledge_source.py  test_models.py  test_provisioner.py  test_retro_eval.py  test_run_comparison.py
web/: components.py  mermaid.py  models.py  state.py  web.py
web/pages/: dashboard.py  dataset_detail.py  datasets.py  knowledge_sources.py  retro.py  retro_conversations.py  retro_suggest.py  run_detail.py  runs.py  scenarios.py  settings.py  setup.py
